--- a/public/main/css/style.css
+++ b/public/main/css/style.css
@@ -12943,3 +12943,214 @@ textarea.form-control {
         stroke-dashoffset: -136px;
     }
 }
+
+/* TAMBAHAN */
+/*booking section */
+.container-flex {
+    display: flex;
+    width: 100%;
+}
+
+.left-column {
+    flex: 1;
+}
+
+.right-column {
+    flex: 0 0 300px;
+    margin-left: 20px;
+}
+.mobil-detail {
+    padding: 20px;
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-radius: 25px;
+    max-width: 800px;
+    margin: 20px auto;
+}
+
+.mobil-detail h2 {
+    margin-bottom: 20px;
+    /* font-size: 1.5rem; */
+    font-weight: bold;
+}
+
+.car-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.car-img img {
+    border-radius: 15px;
+    height: 150px;
+    width: auto;
+}
+
+.car-info {
+    flex: 1;
+    padding-left: 20px;
+}
+
+.car-info p {
+    font-size: 1.25rem;
+    font-weight: bold;
+}
+.rental-form-box {
+    color: var(--dark);
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 25px;
+    box-shadow: 0 4px 20px rgba(20, 0, 0, 0.1);
+}
+.rental-form-box h2 {
+    font-weight: bolder;
+}
+.rental-form-box label {
+    font-weight: 500;
+    font-size: 18px;
+}
+
+.important-info {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 25px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.important-info h2 {
+    font-weight: bolder;
+    color: #343a40;
+}
+
+.important-info ul {
+    list-style-type: none;
+    padding-left: 0;
+}
+
+.important-info li {
+    color: var(--gray);
+    margin-bottom: 10px;
+}
+.button-wrap {
+    display: flex;
+    background-color: #fff;
+    justify-content: center;
+    width: 100%;
+    height: 80px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    border-radius: 20px;
+    box-shadow: 0 1px 4px 4px rgba(0, 0, 0, 0.1);
+}
+.checkout-btn {
+    padding: 12px 24px;
+    font-size: 20px;
+    width: 98%;
+    height: 70px;
+    border-radius: 20px;
+    margin-top: 5px;
+    border: 0;
+    font-weight: bolder;
+}
+
+.total-cost-box {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 100px;
+    margin-bottom: 20px;
+    border-radius: 25px;
+    width: 400px;
+    height: auto;
+    padding: 20px;
+    background-color: #fff;
+    color: var(--dark);
+    border: 0.01px solid rgb(212, 211, 211);
+    border-bottom: 6px solid var(--blue);
+    box-shadow: 0 4px 12px rgba(4, 0, 0, 0.1);
+}
+.total-cost-box h2 {
+    color: var(--blue);
+    font-size: 30px;
+    font-weight: bolder;
+    margin-bottom: 20px;
+}
+.total-cost-box .cost-details {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+}
+
+.total-cost-box .form-group {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-bottom: 5px;
+    margin-bottom: 5px;
+}
+
+.total-cost-box .form-group:not(:nth-child(2)) {
+    border-bottom: 2.5px solid #ccc;
+}
+.total-cost-box .form-group label {
+    margin-right: 10px;
+}
+.total-cost-box .form-group.div {
+    font-size: 18px;
+    font-weight: 500;
+}
+.total-cost-box .form-group span {
+    color: var(--dark);
+    text-align: right;
+}
+.total-cost-box .form-group.total-payment {
+    font-weight: bolder;
+    margin-top: 20px;
+    border-bottom: 0;
+    font-size: 24px;
+}
+.total-cost-box .form-group.vocer label {
+    color: var(--green);
+    font-weight: bold;
+    font-size: 20px;
+}
+.total-cost-box .form-group.vocer span {
+    color: var(--green);
+    font-weight: bold;
+    font-size: 20px;
+}
+.nav-booking-1 {
+    width: 100%;
+    background-color: lightblue;
+    height: 125px;
+}
+.nav-booking {
+    background-color: var(--blue);
+    height: 250px;
+    overflow-x: auto;
+    white-space: nowrap;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+    box-shadow: 0 4px 16px rgba(0, 0, 0, 0.4), 0 -8px 16px rgba(0, 0, 0, 0.4);
+}
+
+.nav-booking::-webkit-scrollbar {
+    display: none; /* Untuk Chrome, Safari, dan Opera */
+}
+.image-container {
+    display: flex;
+    width: max-content;
+}
+
+.image-container img {
+    height: 250px;
+    width: auto;
+    margin: 0;
+}
+.booking-top {
+    justify-content: center;
+    margin-top: 30px;
+    margin-left: 25%;
+}
+.booking-top h2 {
+    font-weight: bolder;
+}
