--- a/public/main/css/style.css
+++ b/public/main/css/style.css
@@ -11941,7 +11941,7 @@ textarea.form-control {
 .ftco-footer {
     font-size: 16px;
     background: #000;
-    padding: 7em 0;
+    padding: 60px 0 10px;
 }
 .ftco-footer .logo {
     text-transform: uppercase;
